# paleofuturistic_python

./: .gitignore  .security-overrides  404.html  CLAUDE.md  LICENSE  README.md  cookiecutter.json  copier.yml  index.html  properdocs.yml  pyproject.toml  tasks_render.py  workflow  workflow.cmd
.claude/: settings.local.json
.github/workflows/: pages.yaml  template-matrix.yaml
_CI/: __init__.py
_CI/tasks/: __init__.py  configuration.py  document.py  test.py
docs/: index.md  walkthrough.md
docs/explanation/: design-principles.md  history-and-lineage.md  why-a-cookiecutter.md  why-copier.md
docs/how-to/: choose-a-git-host.md  choose-python-version-range.md  convert-library-to-cli.md  enable-dependency-track.md  harden-github-repository.md  publish-docs-to-github-pages.md  update-existing-project-with-copier.md  update-existing-project-with-cruft.md
docs/reference/: cookiecutter-variables.md  copier-questions.md  generated-project-tree.md  generation-internals.md  license-options.md  post-gen-hook.md
docs/tutorials/: from-zero-to-published-package.md  generate-your-first-project.md
explanation/: design-principles.html  history-and-lineage.html  why-a-cookiecutter.html  why-copier.html
hooks/: post_gen_project.py
how-to/: choose-a-git-host.html  choose-python-version-range.html  convert-library-to-cli.html  enable-dependency-track.html  harden-github-repository.html  publish-docs-to-github-pages.html  update-existing-project-with-copier.html  update-existing-project-with-cruft.html
js/: base.js  darkmode.js
reference/: cookiecutter-variables.html  copier-questions.html  generated-project-tree.html  generation-internals.html  license-options.html  post-gen-hook.html
search/: search_index.json
template/: .actrc.jinja  README.md.jinja  properdocs.yml.jinja  pyproject.toml.jinja
template/_CI/: README.md.jinja
template/_CI/tasks/: configuration.py.jinja  container.py.jinja  document.py.jinja  release.py.jinja  sbom.py.jinja  secure.py.jinja  shared.py  test.py.jinja  {% if git_hosting_service == 'github' %}github.py{% endif %}.jinja
template/docs/: index.md.jinja
template/docs/explanation/: the-ci-tasks-architecture.md.jinja
template/docs/how-to/: build-and-push-a-container.md.jinja  preview-docs-locally.md.jinja
template/docs/reference/: api.md.jinja  invoke-tasks.md.jinja
template/docs/tutorials/: make-your-first-release.md.jinja
template/licenses/: Apache-2.0.header  BSD-3-Clause  BSD-3-Clause.header  MIT  MIT.header
template/src/{{ project_slug }}/: __init__.py.jinja  {{ project_slug }}.py.jinja
template/tests/: __init__.py.jinja  conftest.py.jinja  test_{{ project_slug }}.py.jinja
template/{% if git_hosting_service == 'github' %}.github{% endif %}/workflows/: publish.yaml.jinja  {% if integrate_pages %}pages.yaml{% endif %}
tests/: conftest.py  test_template_invariants.py
tutorials/: from-zero-to-published-package.html  generate-your-first-project.html
{{ cookiecutter.project_slug }}/: .actrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .python-version  Dockerfile.act  Dockerfile.deps  README.md  mkdocs.yml  properdocs.yml  pyproject.toml  workflow  workflow.cmd  {{ 'LICENSE' if cookiecutter.license == 'BSD-3-Clause' }}  {{ 'LICENSE' if cookiecutter.license == 'MIT' }}
{{ cookiecutter.project_slug }}/.github/actions/build-deps-image/: action.yaml
{{ cookiecutter.project_slug }}/.github/actions/checkout/: action.yaml
{{ cookiecutter.project_slug }}/.github/workflows/: build-deps-image.yaml  continuous-integration.yaml  pages.yaml  publish.yaml  quality-assurance.yaml
{{ cookiecutter.project_slug }}/_CI/: README.md  __init__.py  info.py  pyproject.toml  tasks.py
{{ cookiecutter.project_slug }}/_CI/lib/tasks/: configuration.py
{{ cookiecutter.project_slug }}/_CI/tasks/: __init__.py  _shared.py  bootstrap.py  build.py  configuration.py  container.py  document.py  format_.py  github.py  gitlab.py  lint.py  quality.py  release.py  sbom.py  secure.py  shared.py  test.py
{{ cookiecutter.project_slug }}/docs/: index.md
{{ cookiecutter.project_slug }}/docs/explanation/: sbom-and-security-model.md  testing-strategy.md  the-ci-tasks-architecture.md  why-uv.md
{{ cookiecutter.project_slug }}/docs/how-to/: build-and-push-a-container.md  preview-docs-locally.md  upload-an-sbom-to-dependency-track.md
{{ cookiecutter.project_slug }}/docs/reference/: api.md  configuration-files.md  invoke-tasks.md
{{ cookiecutter.project_slug }}/docs/tutorials/: first-run-setup.md  make-your-first-release.md
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  {{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_{{ cookiecutter.project_slug }}.py
