[project]
name = "paleofuturistic-python-template"
version = "0.0.0"
description = "Repository scaffolding for the copier template; not a publishable package."
requires-python = ">=3.12"

[tool.uv]
package = false
required-version = "==0.11.15"
exclude-newer = "1 week"

[dependency-groups]
# PyYAML parses copier.yml in _CI.tasks.configuration.base_context; the `dev` group is
# auto-synced by `uv run` (invoke tasks) and included alongside `--group test` (pytest).
dev = [
    "pyyaml",
]
test = [
    "pytest",
]

[tool.properdocs]
version = "1.6.7"
theme-mkdocs-version = "1.6.7"
